# Trasher

./: Cargo.toml  README.md
src/: actions.rs  args.rs  cmd.rs  command.rs  display.rs  fsutils.rs  fuzzy.rs  items.rs  logger.rs  logging.rs  main.rs
