[package]
name = "trasher"
version = "3.3.1"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A small command-line utility to replace 'rm' and 'del' by a trash system"
readme = "README.md"
repository = "https://github.com/ClementNerma/Trasher"
categories = ["filesystem", "command-line-utilities"]
keywords = ["trash", "command-line", "rm"]

[[bin]]
name = "trasher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.37"
regex = "1.10.4"
crc-any = "2.4.4"
base64 = "0.22.0"
once_cell = "1.19.0"
anyhow = "1.0.81"
ratatui = "0.26.1"
crossterm = { version = "0.27.0", default-features = false }
tui-input = "0.8.0"
dirs = "5.0.1"
mountpoints = "0.2.1"
indicatif = "0.17.8"
fs_extra = "1.3.0"
comfy-table = "7.1.0"
