[package]
name = "trasher"
version = "4.2.3"
authors = ["Clément Nerma <clement.nerma@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "A small command-line utility to replace 'rm' and 'del' by a trash system"
readme = "README.md"
repository = "https://github.com/ClementNerma/Trasher"
categories = ["filesystem", "command-line-utilities"]
keywords = ["trash", "command-line", "rm"]

[[bin]]
name = "trasher"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
base64 = "0.22.1"
anyhow = "1.0.93"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", default-features = false }
tui-input = "0.11.0"
dirs = "5.0.1"
mountpoints = "0.2.1"
indicatif = "0.17.8"
fs_extra = "1.3.0"
comfy-table = "7.1.1"
walkdir = "2.5.0"
jiff = "0.1.14"
log = { version = "0.4.25", features = ["std"] }
colored = "3.0.0"
